Add application insights

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ApplicationInsights": {
+    "InstrumentationKey": "ef03db83-f87f-4201-afc2-6250a1322225"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information"
@@ -6,6 +9,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDbConnection": "Server=(localdb)\\mssqllocaldb;Database=MyDatabaseContext-2085246d-aff5-4310-a0b8-93780358cdae;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MyDbConnection": "Server=tcp:DemoContestDB.database.windows.net,1433;Database=coreDB;User ID=sqladmin;Password=Pa$$word;Encrypt=true;Connection Timeout=30;"
   }
 }
